# tech-doc-audit

./: .env.example  .gitignore  .phase1_complete  .phase2_complete  .phase3_complete  .phase4_complete  .phase5_complete  .phase6_complete  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml  requirements.txt  review_report.md
api/: deps.py  main.py
benchmark/: __main__.py  cli.py  metrics.py  models.py  reporter.py  runner.py  sweeper.py  test_cases.yaml
cli/: __main__.py  main.py
core/: degradation.py  heading_processor.py  index_manager.py  logger.py  paddleocr_cache.py  pages_store.py  parse_document.py  retriever.py  settings.py  text_extraction.py  text_norm.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
models/: audit_document.py  audit_task.py  document.py  knowledge_base.py  llm_schemas.py  requirement.py
sample_docs/: README.md  sample.md
scripts/: bulk_import.py  eval_qa.py  generate_sample_doc.py  import_approved.py  import_docs.py  import_pdfs.py  index_big_pdf.py  index_real_doc.py  migrate_data.py  normalize_names.py  patch_sources.py  split_kb_pdf.py  split_pending.py  start.sh  test_full_flow.py  toc_audit.py  verify_all.py
services/: agent_audit.py  agent_tools.py  agent_trace.py  agentic_audit.py  agentic_qa.py  audit_analysis_service.py  audit_doc_service.py  audit_task_service.py  chunking.py  doc_classifier.py  doc_service.py  document_nav.py  indexing_service.py  kb_service.py  llm_client.py  pageindex_search.py  qa_service.py  reparse_service.py  requirement_audit.py  requirement_extractor.py  search_service.py  standard_linker.py  structure_parser.py  structure_service.py  temp_index_service.py  topic_audit.py  vector_search.py
storage/: __init__.py  audit_doc_repo.py  audit_task_repo.py  doc_repo.py  index_repo.py  kb_repo.py
tests/: __init__.py  conftest.py  test_agent_audit.py  test_agent_tools.py  test_agent_trace.py  test_agentic_audit.py  test_agentic_qa.py  test_api_index_status_contract.py  test_api_integration.py  test_audit_doc_service.py  test_audit_task_service.py  test_deepseek_client.py  test_doc_parser.py  test_doc_service.py  test_index_manager.py  test_index_status_models.py  test_integration.py  test_kb_files_api.py  test_kb_index_status_truth.py  test_kb_reparse_e2e.py  test_kb_service.py  (+16 more)
(+90 files in other folders)
