[project]
name = "jishu-shenhe"
version = "0.1.0"
description = "技术文档智能审核系统 — FastAPI + 向量检索"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # LLM 客户端
    "httpx>=0.25.0",
    "openai>=1.0.0",
    # 文档处理
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "reportlab>=4.0.0",
    "mineru[pipeline]>=0.5.0",
    # API 服务
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    # CLI 工具
    "typer>=0.9.0",
    # 工具库
    "python-ulid>=2.0.0",
    "sentence-transformers>=5.5.0",
    "torch>=2.4.0,<2.8.0",
    "modelscope>=1.36.3",
    "llama-index-core>=0.14.22",
    "llama-index-vector-stores-faiss>=0.6.0",
    "llama-index-embeddings-huggingface>=0.7.0",
    "faiss-cpu>=1.13.2",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-llms-openai>=0.7.8",
    "socksio>=1.0.0",
    "llama-index-embeddings-openai>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.4.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli*", "api*", "core*", "models*", "services*", "storage*", "benchmark*"]
exclude = ["tests*", "scripts*", "sample_docs*", "frontend*", "data*", "logs*"]

[tool.uv.sources]
# 所有依赖通过 PyPI 安装，无需额外源

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
# 防止模型加载（bge-m3 / MinerU）偶发挂起时无限阻塞：单测试超 180s 判失败
timeout = 180
